--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -3,114 +3,113 @@
     <h2 class="program-title">Our program</h2>
     <ul class="program-list list">
       <li class="program-item">
-        <h3 class="program-h3">1 semester</h3>
-        <ul class="list program-education-list">
-          <li class="program-key-points">
-            <h4 class="program-h4">— Grammar</h4>
-            <ul class="list">
-              <li class="program-points-description">Nouns & Articles</li>
-              <li class="program-points-description">Adjectives & Adverb</li>
+        <h3 class="program-item-title">1 semester</h3>
+        <ul class="list program-study-block">
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Grammar</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Nouns & Articles</li>
+              <li class="program-topic-item">Adjectives & Adverb</li>
             </ul>
           </li>
-          <li class="program-key-points">
-            <h4 class="program-h4">— Vocabulary</h4>
-            <ul class="list">
-              <li class="program-points-description">Family & Relations</li>
-              <li class="program-points-description">People & Society</li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-      <li class="program-item">
-        <h3 class="program-h3">2 semester</h3>
-        <ul class="list program-education-list">
-          <li class="program-key-points">
-            <h4 class="program-h4">— Grammar</h4>
-            <ul class="list">
-              <li class="program-points-description">Pronouns</li>
-              <li class="program-points-description">Active Voice</li>
-              <li class="program-points-description">Passive Voice</li>
-            </ul>
-          </li>
-          <li class="program-key-points">
-            <h4 class="program-h4">— Vocabulary</h4>
-            <ul class="list">
-              <li class="program-points-description">Home</li>
-              <li class="program-points-description">School</li>
-              <li class="program-points-description">Work</li>
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Vocabulary</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Family & Relations</li>
+              <li class="program-topic-item">People & Society</li>
             </ul>
           </li>
         </ul>
       </li>
       <li class="program-item">
-        <h3 class="program-h3">3 semester</h3>
-        <ul class="list program-education-list">
-          <li class="program-key-points">
-            <h4 class="program-h4">— Grammar</h4>
-            <ul class="list">
-              <li class="program-points-description">Modal verbs</li>
-              <li class="program-points-description">Infinitive Gerund</li>
-              <li class="program-points-description">Participle: 1, 2</li>
+        <h3 class="program-item-title">2 semester</h3>
+        <ul class="list program-study-block">
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Grammar</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Pronouns</li>
+              <li class="program-topic-item">Active Voice</li>
+              <li class="program-topic-item">Passive Voice</li>
             </ul>
           </li>
-          <li class="program-key-points">
-            <h4 class="program-h4">— Vocabulary</h4>
-            <ul class="list">
-              <li class="program-points-description">Travel & Tourism</li>
-              <li class="program-points-description">Culture & Free Time</li>
-              <li class="program-points-description">Sport</li>
-            </ul>
-          </li>
-          <li class="program-key-points">
-            <h4 class="program-h4">— Vocabulary</h4>
-            <ul class="list">
-              <li class="program-points-description">Informal Letter</li>
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Vocabulary</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Home</li>
+              <li class="program-topic-item">School</li>
+              <li class="program-topic-item">Work</li>
             </ul>
           </li>
         </ul>
       </li>
       <li class="program-item">
-        <h3 class="program-h3">4 semester</h3>
-        <ul class="list program-education-list">
-          <li class="program-key-points">
-            <h4 class="program-h4">— Grammar</h4>
-            <ul class="list">
-              <li class="program-points-description">Clauses: Conditional and Wishes</li>
-              <li class="program-points-description">Direct / Reported speech</li>
-              <li class="program-points-description">Preposition</li>
-              <li class="program-points-description">Conjunction</li>
-              <li class="program-points-description">Numeral</li>
+        <h3 class="program-item-title">3 semester</h3>
+        <ul class="list program-study-block">
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Grammar</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Modal verbs</li>
+              <li class="program-topic-item">Infinitive Gerund</li>
+              <li class="program-topic-item">Participle: 1, 2</li>
             </ul>
           </li>
-          <li class="program-key-points">
-            <h4 class="program-h4">— Vocabulary</h4>
-            <ul class="list">
-              <li class="program-points-description">Healthy Living</li>
-              <li class="program-points-description">Nature & Environment</li>
-              <li class="program-points-description">Money</li>
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Vocabulary</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Travel & Tourism</li>
+              <li class="program-topic-item">Culture & Free Time</li>
+              <li class="program-topic-item">Sport</li>
             </ul>
           </li>
-          <li class="program-key-points">
-            <h4 class="program-h4">— Vocabulary</h4>
-            <ul class="list">
-              <li class="program-points-description">Formal Letter</li>
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Vocabulary</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Informal Letter</li>
             </ul>
           </li>
         </ul>
       </li>
       <li class="program-item">
-        <h3 class="program-h3">5 semester</h3>
-        <ul class="list program-education-list program-education-list-mod">
-          <li class="program-key-points"><h4 class="program-h4">—</h4></li>
-          <li>
-            <ul class="list program-photo">
-              <li class="program-points-description">Revision</li>
-              <li class="program-points-description">Tests</li>
+        <h3 class="program-item-title">4 semester</h3>
+        <ul class="list program-study-block">
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Grammar</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Clauses: Conditional and Wishes</li>
+              <li class="program-topic-item">Direct / Reported speech</li>
+              <li class="program-topic-item">Preposition</li>
+              <li class="program-topic-item">Conjunction</li>
+              <li class="program-topic-item">Numeral</li>
+            </ul>
+          </li>
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Vocabulary</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Healthy Living</li>
+              <li class="program-topic-item">Nature & Environment</li>
+              <li class="program-topic-item">Money</li>
+            </ul>
+          </li>
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">— Vocabulary</h4>
+            <ul class="list program-topic-list">
+              <li class="program-topic-item">Formal Letter</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li class="program-item">
+        <h3 class="program-item-title">5 semester</h3>
+        <ul class="list program-study-block program-study-block-mod">
+          <li class="program-study-block-item">
+            <h4 class="program-study-block-title">—</h4>
+            <ul class="list program-topic-list program-photo">
+              <li class="program-topic-item">Revision</li>
+              <li class="program-topic-item">Tests</li>
             </ul>
           </li>
         </ul>
       </li>
     </ul>
-    <h2 class="program-title sub-title">Why do people choose us</h2>
   </div>
 </section>
