--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -18,7 +18,7 @@
   color: $primary-text-color;
   font-size: 12px;
   line-height: 1.67;
-  font-style: normal;
+
   margin-bottom: 10px;
   text-align: left;
 }
@@ -26,14 +26,14 @@
   font-weight: 800;
   line-height: 1.3;
   letter-spacing: 0.03em;
-  font-style: normal;
+
   margin-bottom: 20px;
 }
 .about-name {
   display: block;
   font-weight: 800;
   line-height: 1.2;
-  font-style: normal;
+
   padding-top: 10px;
   padding-bottom: 10px;
 
@@ -76,6 +76,13 @@
     font-size: 46px;
     margin-bottom: 30px;
   }
+  .about-list {
+    font-size: 14px;
+    line-height: 1.25;
+    margin-top: 60px;
+    margin-bottom: 35px;
+  }
+
   .about-item {
     width: 402px;
     padding-bottom: 30px;
@@ -88,6 +95,14 @@
   }
   .about-name {
     padding-top: 0px;
+    &::after {
+      content: '';
+      display: block;
+      background-color: $primary-text-color;
+      height: 1px;
+      width: 401px;
+      margin-top: 20px;
+    }
   }
   .text-descr {
     width: 402px;
@@ -109,5 +124,9 @@
   }
   .text-descr {
     width: 642px;
+  }
+
+  .about-tab {
+    justify-content: space-between;
   }
 }
