--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -26,14 +26,12 @@
   font-weight: 800;
   line-height: 1.3;
   letter-spacing: 0.03em;
-
   margin-bottom: 20px;
 }
 .about-name {
   display: block;
   font-weight: 800;
   line-height: 1.2;
-
   padding-top: 10px;
   padding-bottom: 10px;
 
@@ -46,34 +44,40 @@
     margin-top: 20px;
   }
 }
+
 .about-link {
   color: $accent-color;
   font-size: 12px;
   line-height: 1.67;
   font-style: normal;
 }
+
 .about-picture {
   margin-bottom: 20px;
   object-fit: cover;
 }
+
 .about-item {
   padding-bottom: 25px;
   text-align: left;
   display: block;
   width: 253px;
 }
+
 .about-check {
   margin-right: 10px;
 }
+
 .about-tumb {
   display: flex;
 }
 
 @media screen and (min-width: 480px) {
 }
+
 @media screen and (min-width: 768px) {
   .about-title {
-    font-size: 46px;
+    font-size: 26px;
     margin-bottom: 30px;
   }
   .about-list {
@@ -106,6 +110,8 @@
   }
   .text-descr {
     width: 402px;
+    font-size: 10px;
+    line-height: 2;
   }
 }
 @media screen and (min-width: 1366px) {
