bugfix/button-and-form
button - padding

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -2,7 +2,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding: 15px 0;
+    padding: 15px 5px;
 
     width: 260px;
     border: 2px solid $accent-color;
