--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,53 +1,53 @@
 <header class="header">
     <div class="header-wrappe container">
         <nav class="headernav">
-            <a class="headernav__logo">HELL<span class="headernav__logosvg">
-                <svg class="headernav__svghead"  width="22" height="30">
+            <a class="desklogo">HELL<span class="deslogosvg">
+                <svg class="desk-svghead"  width="22" height="30">
                     <use href="../src/images/icons/sprite.svg#icon-fire"></use>
                 </svg>
             </span>ENN
-            <p class="headernav__footer">HELLISH<span class="headernav__down"> ENGLISH</span></p>
+            <p class="head-footer">HELLISH<span class="headernav-down"> ENGLISH</span></p>
         </a>
-            <ul class="headernav__title hero">
-                <li class="headernav__link"><a class="headernav__main">STUDING PROGRAM</a></li>
-                <li class="headernav__link"><a class="headernav__main">ABOUT</a></li>
-                <li class="headernav__link"><a class="headernav__main">TRAINING OPTIONS</a></li>
-                <li class="headernav__link"><a class="headernav__main">CONTACTS</a></li>
+            <ul class="headernav-title hero">
+                <li class="head-link"><a class="head-main headermenu-current" href="#">STUDING PROGRAM</a></li>
+                <li class="head-link"><a class="head-main" href="#">ABOUT</a></li>
+                <li class="head-link"><a class="head-main" href="#">TRAINING OPTIONS</a></li>
+                <li class="head-link"><a class="head-main" href="#">CONTACTS</a></li>
             </ul>
         </nav>
-        <button type="button" class="header-wrappe__order-button">CONSULTATION BY PHONE</button>
+        <button type="button" class="order-button">CONSULTATION BY PHONE</button>
 
-        <button type="button" class="header-wrappe__mobile-button" data-menu-button>
-            <svg class="contact__iconhead" width="21" height="12">
+        <button type="button" class="mobile-button" data-menu-button>
+            <svg class="iconhead" width="21" height="12">
                 <use href="../src/images/icons/sprite.svg#icon-menu"></use>
             </svg>
         </button>
     </div>
 
-    <div class="mobile-headermenu is-open">
-        <div class="mobile-headermenu__container">
-            <a class="headernav__mobile-logo">HELL<span class="headernav__mobile-logosvg">
-                <svg class="headernav__mobile-svghead"  width="22" height="30">
+    <div class="mobile-header is-open">
+        <div class="mobile-headermenu container">
+            <a class="mobile-logo">HELL<span class="mobile-logosvg">
+                <svg class="mobile-svghead"  width="22" height="30">
                     <use href="../src/images/icons/sprite.svg#icon-fire"></use>
                 </svg>
             </span>ENN
-            <p class="headernav__footer">HELLISH<span class="headernav__mobiledown">ENGLISH</span></p>
+            <p class="head-footer">HELLISH<span class="mobiledown">ENGLISH</span></p>
         </a>
 
-            <button type="button" class="mobile-headermenu__close-button" data-menu-close>
-                <svg class="mobile-headermenu__iconheadclose" width="15" height="15">
+            <button type="button" class="close-button" data-menu-close>
+                <svg class="iconheadclose" width="15" height="15">
                     <use href="../src/images/icons/sprite.svg#icon-close"></use>
                 </svg>
             </button> 
 
-            <ul class="mobile-headermenu__mobilehero hero">
-                <li class="mobile-headermenu__item"><a class="mobile-mobilemenu__link mobile-headermenu__current">Studying program</a></li>
-                <li class="mobile-headermenu__item"><a class="mobile-mobilemenu__link">About</a></li>
-                <li class="mobile-headermenu__item"><a class="mobile-mobilemenu__link">Training options</a></li>
-                <li class="mobile-headermenu__item"><a class="mobile-mobilemenu__link">Contacts</a></li>
+            <ul class="mobilehero hero">
+                <li class="mobile-item"><a class="mobile-link  mobilemenu-current"href="#">Studying program</a></li>
+                <li class="mobile-item"><a class="mobile-link" href="#">About</a></li>
+                <li class="mobile-item"><a class="mobile-link" href="#">Training options</a></li>
+                <li class="mobile-item"><a class="mobile-link" href="#">Contacts</a></li>
             </ul>
 
-            <button type="button" class="header-wrappe__mobileorder-button">CONSULTATION BY PHONE</button>
+            <button type="button" class="mobileorder-button">CONSULTATION BY PHONE</button>
         </div>
 
     </div>
