add burger menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
 
         <button type="button" class="mobile-button" data-menu-button>
             <svg class="iconhead" width="21" height="12">
-                <use href="../src/images/icons/sprite.svg#icon-menu"></use>
+                <use href="../src/images/icons/menu.svg#icon-menu"></use>
             </svg>
         </button>
     </div>
