--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -28,6 +28,12 @@ display: none;
     margin-right: auto;
 }
 
+.mobile-button{
+
+    background-color: transparent;
+    border: none;
+}
+
 .desklogo{
 font-family: Montserrat;
 font-style: normal;
