Add basic markup and styles for review section + slick slaider

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,20 @@
 <section class="review container">
     <h2 class="review-title title">Feedback from graduates</h2>
-    <ul class="list">
+    <ul class="comments-list list">
+        <li class="comments-item">
+            <div class="left-side-review">
+            <img class="commentators-photo" src="./images/content/mobile/reviews-img-7-accent-mob.webp" alt="">
+            <svg class="vk-icon">
+                <use href="./images/icons/sprite.svg#icon-vk"></use>
+            </svg>
+            <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+            </div>
+            <div class="text-box">
+                <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
+                <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis minus cumque nostrum error ab voluptatem vero exercitationem minima quam repellat, maiores, quibusdam aperiam veniam qui earum reprehenderit optio facilis. Aliquid. <a class="comments-link" href="#">Read more</a>
+                </p>
+            </div>
+        </li>
         <li class="comments-item">
             <img class="commentators-photo" src="./images/content/mobile/reviews-img-7-accent-mob.webp" alt="">
             <svg class="vk-icon">
@@ -8,23 +22,8 @@
             </svg>
             <h3 class="commentators-name">Tonya Kucherovskaya</h3>
             <div class="text-box">
-                <p class="comment">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
-                <p>In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson I
-                realized that I was on my plate. Elena and I became friends because she was really worried about my success. She became
-                an authority for me, but I did not tremble in class, fearing to make the slightest mistake. Now I can brag that I'm
-                student... <a class="comments-link" href="#">Read more</a>
-                </p>
-            </div>
-        </li>
-        <li class="comments-item">
-            <img class="commentators-photo" src="./images/content/mobile/reviews-img-7-accent-mob.webp" alt="">
-            <svg class="vk-icon">
-                <use href="./images/icons/sprite.svg#icon-vk"></use>
-            </svg>
-            <h3 class="commentators-name">Tonya Kucherovskaya</h3>
-            <div>
-                <p class="comment">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
-                <p>In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
+                <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
+                <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
                     I
                     realized that I was on my plate. Elena and I became friends because she was really worried about my success. She
                     became
@@ -39,9 +38,21 @@
                 <use href="./images/icons/sprite.svg#icon-vk"></use>
             </svg>
             <h3 class="commentators-name">Tonya Kucherovskaya</h3>
-            <div>
-                <p class="comment">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
-                <p>In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
+            <div class="text-box">
+                <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
+                <p class="comment-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sed repellendus mollitia asperiores cum maxime excepturi quo ipsam. Dicta, in eos nihil officia natus accusantium. Distinctio cumque cupiditate beatae at! <a class="comments-link" href="#">Read more</a>
+                </p>
+            </div>
+        </li>
+        <li class="comments-item">
+            <img class="commentators-photo" src="./images/content/mobile/reviews-img-7-accent-mob.webp" alt="">
+            <svg class="vk-icon">
+                <use href="./images/icons/sprite.svg#icon-vk"></use>
+            </svg>
+            <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+            <div class="text-box">
+                <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
+                <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
                     I
                     realized that I was on my plate. Elena and I became friends because she was really worried about my success. She
                     became
@@ -56,9 +67,21 @@
                 <use href="./images/icons/sprite.svg#icon-vk"></use>
             </svg>
             <h3 class="commentators-name">Tonya Kucherovskaya</h3>
-            <div>
-                <p class="comment">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
-                <p>In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
+            <div class="text-box">
+                <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
+                <p class="comment-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. In quos sequi facilis sapiente aspernatur neque, ullam nesciunt autem perspiciatis sit vitae soluta fuga. Alias dicta veniam nobis, iste laborum ad? <a class="comments-link" href="#">Read more</a>
+                </p>
+            </div>
+        </li>
+        <li class="comments-item">
+            <img class="commentators-photo" src="./images/content/mobile/reviews-img-7-accent-mob.webp" alt="">
+            <svg class="vk-icon">
+                <use href="./images/icons/sprite.svg#icon-vk"></use>
+            </svg>
+            <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+            <div class="text-box">
+                <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
+                <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
                     I
                     realized that I was on my plate. Elena and I became friends because she was really worried about my success. She
                     became
@@ -73,59 +96,20 @@
                 <use href="./images/icons/sprite.svg#icon-vk"></use>
             </svg>
             <h3 class="commentators-name">Tonya Kucherovskaya</h3>
-            <div>
-                <p class="comment">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
-                <p>In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
-                    I
-                    realized that I was on my plate. Elena and I became friends because she was really worried about my success. She
-                    became
-                    an authority for me, but I did not tremble in class, fearing to make the slightest mistake. Now I can brag that I'm
-                    student... <a class="comments-link" href="#">Read more</a>
-                </p>
-            </div>
-        </li>
-        <li class="comments-item">
-            <img class="commentators-photo" src="./images/content/mobile/reviews-img-7-accent-mob.webp" alt="">
-            <svg class="vk-icon">
-                <use href="./images/icons/sprite.svg#icon-vk"></use>
-            </svg>
-            <h3 class="commentators-name">Tonya Kucherovskaya</h3>
-            <div>
-                <p class="comment">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
-                <p>In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
-                    I
-                    realized that I was on my plate. Elena and I became friends because she was really worried about my success. She
-                    became
-                    an authority for me, but I did not tremble in class, fearing to make the slightest mistake. Now I can brag that I'm
-                    student... <a class="comments-link" href="#">Read more</a>
-                </p>
-            </div>
-        </li>
-        <li class="comments-item">
-            <img class="commentators-photo" src="./images/content/mobile/reviews-img-7-accent-mob.webp" alt="">
-            <svg class="vk-icon">
-                <use href="./images/icons/sprite.svg#icon-vk"></use>
-            </svg>
-            <h3 class="commentators-name">Tonya Kucherovskaya</h3>
-            <div>
-                <p class="comment">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
-                <p>In a short time with Elena, I mastered grammar and replenished my completely empty vocabulary. From the first lesson
-                    I
-                    realized that I was on my plate. Elena and I became friends because she was really worried about my success. She
-                    became
-                    an authority for me, but I did not tremble in class, fearing to make the slightest mistake. Now I can brag that I'm
-                    student... <a class="comments-link" href="#">Read more</a>
+            <div class="text-box">
+                <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of Ukraine</p>
+                <p class="comment-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione neque ipsa quibusdam nemo delectus quod illum eligendi quam temporibus obcaecati ea, deleniti excepturi quaerat consequuntur repudiandae eum ullam nisi nesciunt? <a class="comments-link" href="#">Read more</a>
                 </p>
             </div>
         </li>
     </ul>
-    <ul class="list">
-        <li><img src="./images/content/mobile/reviews-img-1.png" alt=""></li>
-        <li><img src="./images/content/mobile/reviews-img-2.png" alt=""></li>
-        <li><img src="./images/content/mobile/reviews-img-3.png" alt=""></li>
-        <li><img src="./images/content/mobile/reviews-img-4.png" alt=""></li>
-        <li><img src="./images/content/mobile/reviews-img-5.png" alt=""></li>
-        <li><img src="./images/content/mobile/reviews-img-6.png" alt=""></li>
-        <li><img src="./images/content/mobile/reviews-img-7.png" alt=""></li>
+    <ul class="slider list">
+        <li class="slider-item"><img src="./images/content/mobile/reviews-img-1.png" alt=""></li>
+        <li class="slider-item"><img src="./images/content/mobile/reviews-img-2.png" alt=""></li>
+        <li class="slider-item"><img src="./images/content/mobile/reviews-img-3.png" alt=""></li>
+        <li class="slider-item"><img src="./images/content/mobile/reviews-img-4.png" alt=""></li>
+        <li class="slider-item"><img src="./images/content/mobile/reviews-img-5.png" alt=""></li>
+        <li class="slider-item"><img src="./images/content/mobile/reviews-img-6.png" alt=""></li>
+        <li class="slider-item"><img src="./images/content/mobile/reviews-img-7.png" alt=""></li>
     </ul>
 </section>
