--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/button';
 @import './components/mobile-menu';
 @import './components/title';
+@import './components/slider';
 
 @import './layout/header';
 @import './layout/hero';
