--- a/src/sass/layout/_guarantee.scss
+++ b/src/sass/layout/_guarantee.scss
@@ -6,6 +6,8 @@
 .guar-list {
   padding: 50px 20px 50px 20px;
   background-color: #f1f1f1;
+  list-style: none;
+  margin-bottom: 30px;
 }
 
 .guar-titel {
@@ -56,16 +58,28 @@
   }
 }
 
-.guar-list {
-  list-style: none;
-  background-color: #f1f1f1;
-  margin-bottom: 30px;
-}
-
 .guar-text-color {
   color: $accent-color;
 }
-@media screen and (min-width: 320px) {
+
+@media screen and (min-width: 768px) {
+  .guar {
+    padding-top: 65px;
+    padding-bottom: 65px;
+  }
+  .guar-list {
+    padding: 30px 50px 30px 80px;
+  }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1366px) {
+  .guar-list {
+    padding: 50px 112px 45px 112px;
+  }
+  .guar-titel {
+    font-size: 46px;
+  }
+  .guar-item {
+    font-size: 20px;
+    line-height: 1.4;
+  }
 }
